; ModuleID = '/home/carl/AnghaBench/darwin-xnu/security/extr_mac_data.c_mac_find_policy_data.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/security/extr_mac_data.c_mac_find_policy_data.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mac_policy_conf = type { i32 }

@ENOENT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mac_find_policy_data(i32 %0, i8* %1, i8** %2, i64* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i8**, align 8
  %8 = alloca i64*, align 8
  %9 = alloca %struct.mac_policy_conf*, align 8
  %10 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i8* %1, i8** %6, align 8
  store i8** %2, i8*** %7, align 8
  store i64* %3, i64** %8, align 8
  %11 = load i32, i32* @ENOENT, align 4
  store i32 %11, i32* %10, align 4
  %12 = load i32, i32* %5, align 4
  %13 = call %struct.mac_policy_conf* @mac_get_mpc(i32 %12)
  store %struct.mac_policy_conf* %13, %struct.mac_policy_conf** %9, align 8
  %14 = icmp ne %struct.mac_policy_conf* %13, null
  br i1 %14, label %15, label %23

15:                                               ; preds = %4
  %16 = load %struct.mac_policy_conf*, %struct.mac_policy_conf** %9, align 8
  %17 = getelementptr inbounds %struct.mac_policy_conf, %struct.mac_policy_conf* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = load i8*, i8** %6, align 8
  %20 = load i8**, i8*** %7, align 8
  %21 = load i64*, i64** %8, align 8
  %22 = call i32 @mac_find_module_data(i32 %18, i8* %19, i8** %20, i64* %21)
  store i32 %22, i32* %10, align 4
  br label %23

23:                                               ; preds = %15, %4
  %24 = load i32, i32* %10, align 4
  ret i32 %24
}

declare dso_local %struct.mac_policy_conf* @mac_get_mpc(i32) #1

declare dso_local i32 @mac_find_module_data(i32, i8*, i8**, i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
